--- a/org.kevoree.modeling.microframework.typescript/src/test/resources/test.html
+++ b/org.kevoree.modeling.microframework.typescript/src/test/resources/test.html
@@ -10,12 +10,12 @@
 <script src="../../../target/test-classes/org.kevoree.modeling.microframework.typescript.js"></script>
 <script src="../../../target/test-classes/TestRunner.js"></script>
 <script>
-    try {
+    //try {
         var timeTestSuite = new gentest.FlatJUnitTest();
         timeTestSuite.run();
-    } catch (e) {
-        console.trace(e);
-    }
+    //} catch (e) {
+    //    console.trace(e);
+    //}
 </script>
 
 </body>
